--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
 	<h3>{{data}}</h3>
 	{% else %}
 
+	<p>Hier staat nu dit bericht, henk.</p>
+
+
 	<a href="/logout">Logout</a> <br> <br>
 	<form action="" method="POST">
 	  <input type="username" name="username" placeholder="Instagram Username">
