--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,10 @@
 {% else %}
 <h2>Login</h2>
 <form action="/login" method="POST">
+
+  <p>9 mei HENK!</p>
+
+
   <input type="username" name="username" placeholder="Username">
   <input type="password" name="password" placeholder="Password">
   <input type="submit" value="Log in">
